5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1807_2570.log
== TEST (2019-06-10 21:11:41) 
-- CODE:
from numpy import*
from math import*
a=array(eval(input("vetor: ")))
d=1
for i in range(size(a)):
	d=d*abs(a[i]-(sum(a)/size(a)))
b=(d)**(1/(size(a))	
print(round(b, 3))
-- ERROR:
File "XXXX", line 8
    print(round(b, 3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:12:19) 
-- CODE:
from numpy import*
from math import*
a=array(eval(input("vetor: ")))
d=1
for i in range(size(a)):
	d=d*abs(a[i]-(sum(a)/size(a)))
c=(d)**(1/(size(a))	
print(round(c, 3))
-- ERROR:
File "XXXX", line 8
    print(round(c, 3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:12:31) 
-- CODE:
from numpy import*
from math import*
a=array(eval(input("vetor: ")))
d=1
for i in range(size(a)):
	d=d*abs(a[i]-(sum(a)/size(a)))
c=(d)**(1/(size(a))	
print(round(c,3))
-- ERROR:
File "XXXX", line 8
    print(round(c,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:13:15) 
-- CODE:
from numpy import*
from math import*
a=array(eval(input("vetor: ")))
b=1
for i in range(size(a)):
	b=b*abs(a[i]-(sum(a)/size(a)))
c=(b)**(1/(size(a))	
print(round(c,3))
-- ERROR:
File "XXXX", line 8
    print(round(c,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 21:13:23) 
-- CODE:
from numpy import*
from math import*
a=array(eval(input("vetor: ")))
b=1
for i in range(size(a)):
	b=b*abs(a[i]-(sum(a)/size(a)))
c=(b)**(1/(size(a))	
print(round(c,3))
-- EXECUTION TIME:
0.856092
-- ERROR:
  File "/home/codebench/codes/1807/2570/main.py", line 8
    print(round(c,3))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:14:03) 
-- CODE:
from numpy import*
from math import*
a=array(eval(input("vetor: ")))
b=1
for i in range(size(a)):
	b=b*abs(a[i]-(sum(a)/size(a)))
c=(b)**(1/(size(a))	
print(round(c,3))
-- ERROR:
File "XXXX", line 8
    print(round(c,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:14:32) 
-- CODE:
from numpy import*
from math import*
a=array(eval(input("vetor: ")))
b=1
for i in range(size(a)):
	b=b*abs(a[i]-(sum(a)/size(a)))
	c=(b)**(1/(size(a))	
	print(round(c,3))
-- ERROR:
File "XXXX", line 8
    print(round(c,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:29:11) 
-- CODE:
from numpy import*
from math import*
a=array(eval(input("vetor: ")))
b=1
for i in range(size(a)):
	b=b*abs(a[i]-(sum(a)/size(a)))
c=(b)**(1/(size(a))	
print(round(c,3))
-- ERROR:
File "XXXX", line 8
    print(round(c,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:29:21) 
-- CODE:
from numpy import*
from math import*
a=array(eval(input("vetor: ")))
b=1
for i in range(size(a)):
	b=b*abs(a[i]-(sum(a)/size(a)))
c=(b)**(1/(size(a))	
print (round(c,3))
-- ERROR:
File "XXXX", line 8
    print (round(c,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:46:13) 
-- CODE:
from numpy import*
from math import*
a=array(eval(input("vetor: ")))
b=1
for i in range(size(a)):
	b=b*abs(a[i]-(sum(a)/size(a)))
c=(b)**(1/(size(a))	
print(round(c,3))
-- ERROR:
File "XXXX", line 8
    print(round(c,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:46:24) 
-- CODE:
from numpy import*
from math import*
a=array(eval(input("vetor: ")))
b=1
for i in range(size(a)):
	b=b*abs(a[i]-(sum(a)/size(a)))
c=(b)**(1/(size(a))	
	print(round(c,3))
-- ERROR:
File "XXXX", line 8
    print(round(c,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:48:17) 
-- CODE:
from numpy import*
from math import*
a=array(eval(input("vetor: ")))
b=1
for i in range(size(a)):
	b=b * abs(a[i]-(sum(a)/size(a)))
c = (b)**(1/size(a))	
print(round(c,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 21:48:44) 
-- CODE:
from numpy import*
from math import*
a=array(eval(input("vetor: ")))
b=1
for i in range(size(a)):
	b=b * abs(a[i]-(sum(a)/size(a)))
c = (b)**(1/size(a))	
print(round(c,3))
-- EXECUTION TIME:
1.05046
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
